        Reviewed by Oliver Hunt.

Fix transformed patterns
        https://bugs.webkit.org/show_bug.cgi?id=21498

        Test: fast/canvas/patternfill-repeat.html

        * WebCore.xcodeproj/project.pbxproj:
        * platform/graphics/GraphicsContext.cpp:
        (WebCore::GraphicsContext::setStrokePattern):
        (WebCore::GraphicsContext::setFillPattern):
        (WebCore::GraphicsContext::setStrokeGradient):
        (WebCore::GraphicsContext::setFillGradient):
        * platform/graphics/GraphicsContext.h:
        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::applyStrokePattern):
        (WebCore::applyFillPattern):
        (WebCore::GraphicsContext::drawPath):
        (WebCore::GraphicsContext::fillPath):
        (WebCore::GraphicsContext::strokePath):
        (WebCore::GraphicsContext::fillRect):
        * platform/graphics/qt/GraphicsContextQt.cpp:
        * platform/graphics/wx/GraphicsContextWx.cpp:

Canonical link: https://commits.webkit.org/29701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37456 268f45cc-cd09-0410-ab3c-d52691b4dbfc