WebCore/platform/graphics/GraphicsContext.h
@@ -316,14 +316,10 @@ namespace WebCore {
         void setPlatformFont(const Font& font);
 
         void setPlatformStrokeColor(const Color&);
-        void setPlatformStrokePattern(Pattern*);
-        void setPlatformStrokeGradient(Gradient*);
         void setPlatformStrokeStyle(const StrokeStyle&);
         void setPlatformStrokeThickness(float);
 
         void setPlatformFillColor(const Color&);
-        void setPlatformFillPattern(Pattern*);
-        void setPlatformFillGradient(Gradient*);
 
         void setPlatformShadow(const IntSize&, int blur, const Color&);
         void clearPlatformShadow();
